{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 202,
  "lineage": "098c6fed-9fdf-e772-04b5-b71d9b0a2ed2",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:security-group/sg-06b55b8bb5cb0aae2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06b55b8bb5cb0aae2",
            "ingress": [],
            "name": "maryjane-eks-B0MLwLcD-cluster-2024031311354306860000000d",
            "name_prefix": "maryjane-eks-B0MLwLcD-cluster-",
            "owner_id": "269964381592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "maryjane-eks-B0MLwLcD-cluster"
            },
            "tags_all": {
              "Name": "maryjane-eks-B0MLwLcD-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:security-group/sg-05437af3cdfe436af",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-05437af3cdfe436af",
            "ingress": [],
            "name": "maryjane-eks-B0MLwLcD-node-2024031311354290900000000c",
            "name_prefix": "maryjane-eks-B0MLwLcD-node-",
            "owner_id": "269964381592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "maryjane-eks-B0MLwLcD-node",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "owned"
            },
            "tags_all": {
              "Name": "maryjane-eks-B0MLwLcD-node",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2556578641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06b55b8bb5cb0aae2",
            "security_group_rule_id": "sgr-08478b6c2a9731ba1",
            "self": false,
            "source_security_group_id": "sg-05437af3cdfe436af",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3899558937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-03407aa85611cb144",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2562002132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-0a49012cf2ef9878a",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3298869008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-00d5286444d322761",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-232970374",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-0d5bcc05ddc82824a",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-515826855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-03d21a06e28aeba63",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2048907116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-06e931cebe851f476",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2184758519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-0a08fbf1f5db07813",
            "self": false,
            "source_security_group_id": "sg-06b55b8bb5cb0aae2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3412626262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-02a9a3a23e0efcbe6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3170630074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-0f0f56bd6932b7564",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-413424213",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05437af3cdfe436af",
            "security_group_rule_id": "sgr-0f83653ddf901fbe4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:network-acl/acl-000f754d36aeca6a0",
            "default_network_acl_id": "acl-000f754d36aeca6a0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-000f754d36aeca6a0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "269964381592",
            "subnet_ids": [
              "subnet-02c601d0dee5eeac1",
              "subnet-08ab637d9cd2642ed",
              "subnet-0a6447b9dc2552ed8",
              "subnet-0ba10228151774ac4",
              "subnet-0d0bc3c33d586f3e5",
              "subnet-0d40dc18655826240"
            ],
            "tags": {
              "Name": "maryjane-vpc-default"
            },
            "tags_all": {
              "Name": "maryjane-vpc-default"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:route-table/rtb-06c2c116c2e04815c",
            "default_route_table_id": "rtb-06c2c116c2e04815c",
            "id": "rtb-06c2c116c2e04815c",
            "owner_id": "269964381592",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "maryjane-vpc-default"
            },
            "tags_all": {
              "Name": "maryjane-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:security-group/sg-0114faa3884ac4244",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0114faa3884ac4244",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "269964381592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "maryjane-vpc-default"
            },
            "tags_all": {
              "Name": "maryjane-vpc-default"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bc9ed78fb2815f6",
            "domain": "vpc",
            "id": "eipalloc-03bc9ed78fb2815f6",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-210-233-235.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.233.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "maryjane-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "maryjane-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:internet-gateway/igw-026d11d45e2e916b5",
            "id": "igw-026d11d45e2e916b5",
            "owner_id": "269964381592",
            "tags": {
              "Name": "maryjane-vpc"
            },
            "tags_all": {
              "Name": "maryjane-vpc"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bc9ed78fb2815f6",
            "association_id": "eipassoc-035d00f74f60a5642",
            "connectivity_type": "public",
            "id": "nat-03129c35d2030fd41",
            "network_interface_id": "eni-0895a7e1bc5e30b62",
            "private_ip": "10.0.4.249",
            "public_ip": "52.210.233.235",
            "subnet_id": "subnet-0a6447b9dc2552ed8",
            "tags": {
              "Name": "maryjane-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "maryjane-vpc-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b83326074ee5a631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03129c35d2030fd41",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b83326074ee5a63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-026d11d45e2e916b5",
            "id": "r-rtb-04b8f6806c1c4b06f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b8f6806c1c4b06f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:route-table/rtb-02b83326074ee5a63",
            "id": "rtb-02b83326074ee5a63",
            "owner_id": "269964381592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "maryjane-vpc-private"
            },
            "tags_all": {
              "Name": "maryjane-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:route-table/rtb-04b8f6806c1c4b06f",
            "id": "rtb-04b8f6806c1c4b06f",
            "owner_id": "269964381592",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "maryjane-vpc-public"
            },
            "tags_all": {
              "Name": "maryjane-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075d49d9fff8448d6",
            "route_table_id": "rtb-02b83326074ee5a63",
            "subnet_id": "subnet-0d0bc3c33d586f3e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0289009b65413eaaf",
            "route_table_id": "rtb-02b83326074ee5a63",
            "subnet_id": "subnet-0d40dc18655826240"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfb88c1ae10d871",
            "route_table_id": "rtb-02b83326074ee5a63",
            "subnet_id": "subnet-02c601d0dee5eeac1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054f7e92bbe5c9c75",
            "route_table_id": "rtb-04b8f6806c1c4b06f",
            "subnet_id": "subnet-0a6447b9dc2552ed8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010727a85b9ec9ce5",
            "route_table_id": "rtb-04b8f6806c1c4b06f",
            "subnet_id": "subnet-08ab637d9cd2642ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1675b8a72fb9e83",
            "route_table_id": "rtb-04b8f6806c1c4b06f",
            "subnet_id": "subnet-0ba10228151774ac4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-0d0bc3c33d586f3e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0bc3c33d586f3e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-0d40dc18655826240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d40dc18655826240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-02c601d0dee5eeac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c601d0dee5eeac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-0a6447b9dc2552ed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6447b9dc2552ed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-08ab637d9cd2642ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ab637d9cd2642ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:subnet/subnet-0ba10228151774ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba10228151774ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269964381592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maryjane-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "maryjane-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/maryjane-eks-B0MLwLcD": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-006cc4718dc35715d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:269964381592:vpc/vpc-006cc4718dc35715d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000f754d36aeca6a0",
            "default_route_table_id": "rtb-06c2c116c2e04815c",
            "default_security_group_id": "sg-0114faa3884ac4244",
            "dhcp_options_id": "dopt-081cabb8d457e1f68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006cc4718dc35715d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c2c116c2e04815c",
            "owner_id": "269964381592",
            "tags": {
              "Name": "maryjane-vpc"
            },
            "tags_all": {
              "Name": "maryjane-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}